--- a/tender_client/public/manifest.json
+++ b/tender_client/public/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "Tender",
-  "name": "Tender Marketplace",
-  "icons": [
-    {
-      "src": "/favicon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#dc3545"
+"short_name": "Tender",
+"name": "Tender Marketplace",
+"icons": [
+  {
+    "src": "/favicon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  },
+  {
+    "src": "/android-chrome-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }
+],
+"start_url": "/",
+"display": "standalone",
+"background_color": "#000000",
+"theme_color": "#000000"
 }
