--- a/tender_client/.env
+++ b/tender_client/.env
@@ -1,2 +1,2 @@
-# VITE_APP_API_URL=https://tender-p4a9.onrender.com
-VITE_APP_API_URL=http://localhost:6234
+VITE_APP_API_URL=https://tender-p4a9.onrender.com
+# VITE_APP_API_URL=http://localhost:6234
